Fixed purchase text and button alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,9 +68,11 @@ input, select, textarea {
 
 
 .container {
-	margin: 0 auto;
-    display: flex;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	place-items: center;
+	text-align: center;
 }
 
 
